<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemPharmacistClientHome"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@color/gray3036">

    <ImageView
        android:id="@+id/pharmacyIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/description_pharmacy_icon"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Pharmacy_Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pharmacist_48"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/Pharmacy_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_pharmacy_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Pharmacy_Location"
        app:layout_constraintEnd_toStartOf="@+id/ArrowForward"
        app:layout_constraintStart_toEndOf="@+id/pharmacyIcon"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Pharmacy_Location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_pharmacy_location"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/ArrowForward"
        app:layout_constraintStart_toEndOf="@+id/pharmacyIcon"
        app:layout_constraintTop_toBottomOf="@+id/Pharmacy_Name"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/ArrowForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/description_arrow_forward"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Pharmacy_Name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

</androidx.constraintlayout.widget.ConstraintLayout>